fix spacing issue in experience tile; add footer with name

--- a/less/index.less
+++ b/less/index.less
@@ -161,7 +161,7 @@ header {
 
 .summary {
 	.tile-hw;
-	padding: 50px 5% 0 5%;
+	padding: 46px 5% 0 5%;
 	line-height: 2.8rem;
 	font-family: helvetica, arial;
 	background: #f8f8f8;
@@ -199,7 +199,7 @@ header {
 		border-radius: 20px;
 		font-size: 1.5rem;
 		padding: 5px 5%;
-		margin: 0 10px 3% 0;
+		margin: 0 10px 10px 0;
 		color: @main-blue;
 
 		&:hover {
@@ -211,7 +211,6 @@ header {
 
 .bottom-content {
 	display: block;
-	flex-wrap: wrap;
 	margin: 10px 0;
 	width: 100%;
 	line-height: 2rem;
@@ -232,8 +231,8 @@ header {
 	height: 120px;
 	margin: 10px 30px;
 
-	.experience1 {
-		margin: 10px 40px;
+	.box1 {
+		margin: 10px 30px;
 		width: 33%;
 		line-height: 2rem;
 		font-family: helvetica, arial;
@@ -252,3 +251,63 @@ header {
 	}
 }
 
+.box2 {
+	margin: 10px 10px 10px 100px;
+	width: 33%;
+	line-height: 2rem;
+	font-family: helvetica, arial;
+	background: #f8f8f8;
+	display: block;
+
+	div {
+		font-size: 1.6rem;
+		color: @medium-gray;
+	}
+}
+
+.box3 {
+	margin: 10px 40px;
+	width: 33%;
+	line-height: 2rem;
+	font-family: helvetica, arial;
+	background: #f8f8f8;
+	display: block;
+	text-align: right;
+
+	div {
+		font-size: 1.6rem;
+		color: @medium-gray;
+	}
+}
+
+footer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 1px solid red;
+	height: 100px;
+
+	h1 {
+		font-size: 1.6rem;
+		font-family: helvetica, arial;
+		color: @medium-gray;
+	}
+}
+
+.projects {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 10px 0;
+	width: 100%;
+	line-height: 2rem;
+	font-family: helvetica, arial;
+	height: 240px;
+	background: #f8f8f8;
+
+	h1 {
+		font-size: 2.6rem;
+		color: @medium-gray;
+		margin-bottom: 12px;
+		padding: 5% 0 1% 5%;
+	}
+}
